Excluding some files.

--- a/.gitignore
+++ b/.gitignore
@@ -10,16 +10,37 @@
 *.test
 *~
 .deps/
+/aclocal.m4
+/autom4te.cache
+/compile
+/config.guess
 /config.status
+/config.sub
+/configure
+/depcomp
 /doc/argtable.3
 /doc/argtable2.3
 /doc/argtable2.html
 /doc/Makefile
+/doc/Makefile.in
 /example/Makefile
+/INSTALL
+/install-sh
 /libtool
+/ltmain.sh
+/m4/libtool.m4
+/m4/ltoptions.m4
+/m4/ltversion.m4
+/m4/lt~obsolete.m4
 /Makefile
+/Makefile.in
+/missing
+/mkinstalldirs
 /src/.libs
 /src/config.h
 /src/Makefile
+/src/Makefile.in
 /src/stamp-h1
+/test-driver
 /tests/Makefile
+/tests/Makefile.in
